[package]
name = "r-description"
description = "Parsing and editor for R DESCRIPTION files"
edition = "2021"
version = "0.2.0"
repository = "https://github.com/jelmer/r-description-rs"
homepage = "https://github.com/jelmer/r-description-rs"
license = "Apache-2.0"
keywords = ["r-description", "rfc822", "lossless", "edit", "r"]
categories = ["parser-implementations"]

[dependencies]
deb822-lossless = { version = ">=0.2", features = ["derive"] }
rowan = ">=0.15.16"
url = "2"
serde = { version = "1", optional = true }

[features]
serde = ["dep:serde"]

[dev-dependencies]
serde_json = "1"
